--- a/src/styles/grid.less
+++ b/src/styles/grid.less
@@ -24,7 +24,7 @@
   justify-content: center;
 }
 
-@media(min-width: @screen-lg) {
+@media(min-width: @screen-sm) {
   .col-1 { width: @grid-col-width-desktop; }
   .col-2 { width: 2 * @grid-flex-item-width; }
   .col-3 { width: 3 * @grid-flex-item-width; }
